syntax = "proto3";

option java_package = "quiz.game.trivia";
option java_multiple_files = true;

message SessionTokenPreference {
  string token = 1;
}